lang/macro/tests/ui/fail/35-invalid-interface-name-2.stderr
error: invalid interface name: `fn`
 --> $DIR/35-invalid-interface-name-2.rs:3:28
  |
3 | #[liquid::interface(name = "fn")]
  |                            ^^^^
